# tabasco-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TODO.md  Tabasco_Storage_Strategy.md  docker-compose.yml  main.py  notes.md  pyproject.toml  pytest.ini  requirements-torch.txt
app/: config.py  dependencies.py  deprecated-routes.py  logger.py  main.py  routes.py  server.py  settings.py  types.py  v1_routes.py
app/config/: settings.py
app/models/: disamb_model.py
app/services/: __init__.py  clustering.py  file_generation.py  preprocessing.py  sentence_processing.py  target_matrix.py  text_processing.py
app/utils/: __init__.py  api_response.py  custom_nltk.py  helpers.py  model_config.py  pdf_file_utils.py  running_time.py  standardize.py
core/: business_logic.py
notebooks/: full_api_research.ipynb  get_nouns.ipynb  research.ipynb  summary_clusters.txt  target_matrix.ipynb
prompts/: session.txt
routes/: ambiguous_routes.py
src/: config.py  dependencies.py  deprecated-routes.py  main.py  server.py  v1_routes.py
src/config/: settings.py
src/models/: __init__.py  disamb_model.py
src/routers/: __init__.py
src/routers/v1/: __init__.py  ambiguities.py  download.py  general.py  reports.py
src/routers/v2/: __init__.py  nouns.py  upload.py
src/routes/: __init__.py  ambiguous_routes.py  main_routes.py
src/services/: __init__.py  clustering.py  file_generation.py  report_generation.py  sentence_processing.py  target_matrix.py  text_processing.py
src/utils/: __init__.py  api_response.py  custom_error.py  file_processing.py  file_utils.py  logger.py  model_config.py  pdf_file_utils.py  setup_nltk.py
tests/: test_imports.py  test_preprocessing.py
tests/unit/: sentence_processing_test.py  test_preprocessing.py  test_sentence_processing.py
