[project]
name = "tabasco-fastapi"
version = "0.1.0"
description = "A FastAPI REST API for detecting intra-domain ambiguities in textual corpus"
authors = [{ name = "Vivek Kumar", email = "vivek.indie.dev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "kneed>=0.8.5",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.26.1",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.13",
    "scikit-learn>=1.6.1",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "python-slugify>=8.0.4",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]
